# verso

./: .env.example  .gitignore  AGENTS.md  README.md  Taskfile.yml  go.work  go.work.sum
deploy/: docker-compose.yml
deploy/config/: otel-collector.yaml  prometheus.yml  tempo.yaml
deploy/init/: 01-init-extensions.sql  02-service-schemas.sql
docs/: 07-build-plan.md
libs/go/: go.mod  go.sum
libs/node/: package.json  pnpm-lock.yaml
libs/py/: pyproject.toml
libs/py/src/verso/: envelope.py  errors.py  jwt.py  logger.py  otel.py  outbox.py
libs/py/tests/: test_envelope.py  test_errors.py  test_jwt.py  test_logger.py  test_otel.py  test_outbox.py
proto/: buf.gen.yaml  buf.yaml
scripts/: e2e-smoke.sh  seed-openlibrary.sh  seed-sample.sh  seed.sh
services/verso-ai-inference-service/: Dockerfile  pyproject.toml
services/verso-catalog-service/: .gitignore  Dockerfile  go.mod  go.sum  main.go
services/verso-feed-service/: Dockerfile  package.json  pnpm-lock.yaml
services/verso-identity-service/: Dockerfile  go.mod  go.sum  main.go
services/verso-library-service/: Dockerfile  go.mod  go.sum  main.go
services/verso-llm-gateway/: Dockerfile  pyproject.toml
services/verso-llm-gateway/migrations/: 001_create_prompt_registry.sql  002_create_audit_log.sql
services/verso-llm-gateway/src/verso_llm_gateway/: __init__.py  cache.py  config.py  main.py  registry.py  router.py
services/verso-llm-gateway/src/verso_llm_gateway/providers/: ollama.py
services/verso-llm-gateway/tests/: test_gateway.py
services/verso-review-service/: go.mod  (+3 more)
web/: next.config.ts  package.json
(+189 files in other folders)
