[project]
name = "verso-libs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.29",
  "pydantic>=2.0",
  "python-ulid>=3.0",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp-proto-grpc>=1.25",
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
